# SDR

./: .gitignore  README.md
TRX/: qpsk_signal.txt  trx_and_visual.sh
TRX copy/: CMakeLists.txt
TRX copy/generate/: main.py
TRX copy/receive/: main.py
TRX copy/src/: main copy.cpp
TRX copy/src/include/: my_config.h
TRX copy/src/my_config/: my_config.cpp
TRX copy/src/my_init/: my_init.cpp
TRX/config/: config.cfg
TRX/generate/: main.py  main2.py  main3.py  qpsk_signal.txt
TRX/receive/: main.py  main2.py  main3.py  main4.py  main5.py
TRX/src/: main.cpp
lab_1/: README.md
lab_10/: CMakeLists.txt  README.md
lab_10/config/: config.cfg
lab_10/data/: single_adalm_rx___ copy.txt  single_adalm_rx___.txt
lab_10/generate/: main.py
lab_10/receive/: main.py
lab_10/src/: main copy.cpp  main.cpp
lab_10/src/include/: my_init.h  my_utils.h
lab_10/src/my_config/: my_config.cpp
lab_10/src/my_init/: my_init.cpp
lab_10/src/my_utils/: my_utils.cpp
lab_10/visual/: plot.py  plotQPSK.py  test_qpsk_sdr1(1).py
lab_11/barker/: README.md  barker.py
lab_12/: README.md
lab_13/: README.md
lab_15/: README.md
lab_16/: README.md  main.c
lab_2/: README.md  test2.py
lab_4/: Readme.md  main.py
lab_5/: README.md  main.py
lab_6/: main.py
lab_7/: README.md
lab_8/: README.md  main.py
lab_8(qam)/: CMakeLists.txt
lab_8(qam)/src/: deqam_main.c  qam_main.c
lab_8(qam)/src/include/: qam.h  utils.h
lab_8(qam)/src/qam/: qam.c
lab_8(qam)/src/utils/: utils.c
lab_8(qam)/visual/: main.py
lab_8/src/: main.cpp
lab_9/: README.md
(+10 files in other folders)
